primary home template

--- a/client/components/common/header/header.tpl.html
+++ b/client/components/common/header/header.tpl.html
@@ -1,1 +1,6 @@
-header
+<div class="container">
+	<div class="row">
+		<h1>नेपाली नाम  collection</h1>
+		<h4>Nepali name collection</h4>
+	</div>
+</div>
