--- a/client/views/home/home.tpl.html
+++ b/client/views/home/home.tpl.html
@@ -1,1 +1,30 @@
-home
+<form class="form-inline pull-right">
+  <div class="form-group">
+    <label for="">Name (in english)</label>
+    <input type="text" class="form-control" id="" placeholder="Manish" ng-model="nameInput.en">
+  </div>
+  <div class="form-group">
+    <label for="">नेपालीमा</label>
+    <input type="text" class="form-control" id="" placeholder="मनिश" ng-model="nameInput.np">
+  </div>
+  <button type="submit" class="btn btn-primary" ng-click="add()">Add+</button>
+</form>
+
+<div className="row">
+<table class="table table-bordered">
+  <thead>
+	<tr>
+	  	<td>#</td>
+	  	<td>Name in English</td>
+	  	<td>Name in Nepali</td>
+  	</tr>
+  </thead>
+  <tbody>
+	<tr ng-repeat="name in data | filter:nameInput">
+	  	<td>{{$index+1}}</td>
+	  	<td>{{name.en}}</td>
+	  	<td>{{name.np}}</td>
+	</tr>
+  </tbody>
+</table>
+</div>
