--- a/client/views/home/home.tpl.html
+++ b/client/views/home/home.tpl.html
@@ -1,29 +1,56 @@
+<div class="row">
 <form class="form-inline pull-right">
   <div class="form-group">
-    <label for="">Name (in english)</label>
+    <label >Name (in english)</label>
     <input type="text" class="form-control" id="" placeholder="Manish" ng-model="nameInput.en">
   </div>
   <div class="form-group">
     <label for="">नेपालीमा</label>
     <input type="text" class="form-control" id="" placeholder="मनिश" ng-model="nameInput.np">
   </div>
-  <button type="submit" class="btn btn-primary" ng-click="add()">Add+</button>
+  <div class="form-group">
+   <select name="sex" id="" class="form-control" ng-model="nameInput.sex">
+   	<option value="male" selected>male</option>
+   	<option value="female">female</option>
+   </select>
+  </div>
+  <button type="submit" class="btn btn-primary" ng-click="add()">Add <i class="fa fa-plus" aria-hidden="true"></i>
+</button>
 </form>
+</div>
 
-<div className="row">
+<div class="row">
+<h3>List of collected names</h3>
 <table class="table table-bordered">
   <thead>
 	<tr>
 	  	<td>#</td>
-	  	<td>Name in English</td>
-	  	<td>Name in Nepali</td>
+	  	<td>
+	  	  <a href="#" ng-click="sortType = 'en'; sortReverse = !sortReverse">
+	  	  Name in English
+	  	  <span ng-show="sortType == 'en' && !sortReverse" class="fa fa-caret-down"></span>
+	  	  <span ng-show="sortType == 'en' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+	  	</td>
+	  	<td>
+            Name in Nepali
+        </td>
+
+        <td>
+	  	  <a href="#" ng-click="sortType = 'sex'; sortReverse = !sortReverse">
+	  	  Gender
+	  	  <span ng-show="sortType == 'sex' && !sortReverse" class="fa fa-caret-down"></span>
+	  	  <span ng-show="sortType == 'sex' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+	  	</td>
   	</tr>
   </thead>
   <tbody>
-	<tr ng-repeat="name in data | filter:nameInput">
+	<tr ng-repeat="name in data | orderBy:sortType:sortReverse  | filter:nameInput">
 	  	<td>{{$index+1}}</td>
-	  	<td>{{name.en}}</td>
+	  	<td>{{name.en | capitalize}}</td>
 	  	<td>{{name.np}}</td>
+	  	<td>{{name.sex}}</td>
 	</tr>
   </tbody>
 </table>
